// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination can mount without pagination data 1`] = `

<div id="app">
  <!---->
</div>

`;

exports[`Pagination can set the active page 1`] = `

<div id="app">
  <nav>
    <ul class="pagination justify-content-center">
      <li class>
        <a href="javascript:;"
           aria-label="First"
        >
          <span aria-hidden="true">
            ««
          </span>
        </a>
      </li>
      <li class>
        <a href="javascript:;"
           aria-label="Previous"
        >
          <span aria-hidden="true">
            «
          </span>
        </a>
      </li>
      <li class="page-item">
        <a href="javascript:;">
          1
        </a>
      </li>
      <li class="page-item active">
        <a href="javascript:;">
          2
        </a>
      </li>
      <li class="page-item">
        <a href="javascript:;">
          3
        </a>
      </li>
      <!---->
      <!---->
      <!---->
      <li class>
        <a href="javascript:;"
           aria-label="Next"
        >
          <span aria-hidden="true">
            »
          </span>
        </a>
      </li>
      <li class>
        <a href="javascript:;"
           aria-label="Last"
        >
          <span aria-hidden="true">
            »»
          </span>
        </a>
      </li>
    </ul>
  </nav>
</div>

`;

exports[`Pagination will not display when there is only one page 1`] = `

<div id="app">
  <!---->
</div>

`;

exports[`Pagination will render links when there is more than one page 1`] = `

<div id="app">
  <nav>
    <ul class="pagination justify-content-center">
      <li class="disabled">
        <a href="javascript:;"
           aria-label="First"
        >
          <span aria-hidden="true">
            ««
          </span>
        </a>
      </li>
      <li class="disabled">
        <a href="javascript:;"
           aria-label="Previous"
        >
          <span aria-hidden="true">
            «
          </span>
        </a>
      </li>
      <li class="page-item active">
        <a href="javascript:;">
          1
        </a>
      </li>
      <li class="page-item">
        <a href="javascript:;">
          2
        </a>
      </li>
      <li class="page-item">
        <a href="javascript:;">
          3
        </a>
      </li>
      <!---->
      <!---->
      <!---->
      <li class>
        <a href="javascript:;"
           aria-label="Next"
        >
          <span aria-hidden="true">
            »
          </span>
        </a>
      </li>
      <li class>
        <a href="javascript:;"
           aria-label="Last"
        >
          <span aria-hidden="true">
            »»
          </span>
        </a>
      </li>
    </ul>
  </nav>
</div>

`;
